--- a/privacy.html
+++ b/privacy.html
@@ -2,4 +2,4 @@
 <h1>Privacy Policy</h1>
 <p>CareLink uses Facebook Login only for authentication. We don't sell or share your data.</p>
 <p>Data deletion request: email to beechenen0509@gmail.com</p>
-<p>Effective: 2025-03-XX</p>
+<p>Project for Mobile Application</p>
