--- a/terms.html
+++ b/terms.html
@@ -2,4 +2,4 @@
 <h1>Terms of Service</h1>
 <p>Use CareLink for lawful, personal purposes. Service provided “as is”.</p>
 <p>Contact: beechenen0509@gmail.com</p>
-<p>Effective: 2025-03-XX</p>
+<p>Project for Mobile Application</p>
